--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,6 @@
 }
 
 header {
-    background-image: ;
     color: white;
     padding: 1vw;
 }
@@ -13,6 +12,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-image: url("");
 }
 
 .nav-bar-item {
