--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f4f4f4;
+    background-image: url('../assets/flowers.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 header {
@@ -87,7 +90,6 @@ footer {
     padding: 10px;
     text-align: center;
 }
-
 
 .section, .footer-container {
     padding: 20px;
