--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -12,7 +19,7 @@ body {
 }
 
 header {
-    width: 100%;
+    width: 96.5%;
     background-color: black;
     color: white;
     padding: 3vh;
@@ -82,13 +89,13 @@ nav ul li a {
 }
 
 footer {
-    width: 100%;
-    position: relative;
     background-color: black;
     color: white;
     margin: 20vh;
     padding: 10px;
     text-align: center;
+    margin-top: 14.2vh;
+    width: 98.9%;
 }
 
 .section, .footer-container {
